implement leader board and distance
