# src/main/java/org/cyberrealm/tech/bazario/backend/api/impl/AdApiDelegateImpl.java
@@ -6,6 +6,7 @@ import lombok.RequiredArgsConstructor;
 import org.cyberrealm.tech.bazario.backend.api.AdApiDelegate;
 import org.cyberrealm.tech.bazario.backend.dto.AdDto;
 import org.cyberrealm.tech.bazario.backend.dto.PatchAd;
+import org.cyberrealm.tech.bazario.backend.service.AccessAdService;
 import org.cyberrealm.tech.bazario.backend.service.AdService;
 import org.cyberrealm.tech.bazario.backend.service.AdsService;
 import org.springframework.data.domain.Page;
@@ -17,6 +18,7 @@ import org.springframework.stereotype.Service;
 public class AdApiDelegateImpl implements AdApiDelegate {
     private final AdService adService;
     private final AdsService adsService;
+    private final AccessAdService accessAdService;
 
     @Override
     public ResponseEntity<List<AdDto>> comparesAd(List<Long> ids) {
@@ -48,5 +50,10 @@ public class AdApiDelegateImpl implements AdApiDelegate {
     @Override
     public ResponseEntity<Page> getAds(Map<String, String> filters) {
         return ResponseEntity.ok(adsService.findAll(filters));
+    }
+
+    @Override
+    public ResponseEntity<Page> getAdsLeaderBoard(Map<String, String> filters) {
+        return ResponseEntity.ok(adService.getLeaderBoard(filters));
     }
 }
